--- a/end.html
+++ b/end.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Css/endgame.css" />
+    <link rel="stylesheet" href="./Css/end.css" />
     <link rel="stylesheet" href="./Css/global.css" />
     <title>End Game</title>
   </head>
@@ -15,7 +15,10 @@
     <a href="./index/game.html">Play Again</a>
     <a href=".">High Score</a>
     <a href="./index/index.html">Go Home</a>
-
+    <div class="robot">
+      <img class="angry" src="./Image/robot.png" alt="robot" />
+      <img class="happy" src="./Image/robot (1).png" alt="robot" />
+    </div>
     <script src="./js/end.js"></script>
   </body>
 </html>
