change a few lines of code

--- a/end.html
+++ b/end.html
@@ -10,14 +10,15 @@
   <body>
     <h1>The End !</h1>
     <span id="score-bord">0</span>
-    <input type="email" placeholder="example@example.com" />
-    <button onclick="validateEmail()" class="save">Save</button>
+    <span id="typing-text"></span>
+    <input type="text" placeholder="Enter username" />
+    <button class="save">Save</button>
     <a href="./index/game.html">Play Again</a>
     <a href=".">High Score</a>
     <a href="./index/index.html">Go Home</a>
     <div class="robot">
-      <img class="angry" src="./Image/robot.png" alt="robot" />
       <img class="happy" src="./Image/robot (1).png" alt="robot" />
+      <img src="./Image/left-click.png" alt="hand" class="hand" />
     </div>
     <script src="./js/end.js"></script>
   </body>
