last part of project

--- a/end.html
+++ b/end.html
@@ -14,7 +14,7 @@
     <input type="text" placeholder="Enter username" />
     <button class="save">Save</button>
     <a href="./index/game.html">Play Again</a>
-    <a href=".">High Score</a>
+    <a href="./index/highscore.html">High Score</a>
     <a href="./index/index.html">Go Home</a>
     <div class="robot">
       <img class="happy" src="./Image/robot (1).png" alt="robot" />
