--- a/end.html
+++ b/end.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>The End !</h1>
-    <span id="score-bord">0</span>
+    <span class="score-bord">0</span>
     <span id="typing-text"></span>
     <input type="text" placeholder="Enter username" />
     <button class="save">Save</button>
@@ -17,7 +17,10 @@
     <a href="./index/highscore.html">High Score</a>
     <a href="./index/index.html">Go Home</a>
     <div class="robot">
-      <img class="happy" src="./Image/robot (1).png" alt="robot" />
+      <div class="message">
+        <img class="happy" src="./Image/robot (1).png" alt="robot" />
+        <h3>User name saved successfully!</h3>
+      </div>
       <img src="./Image/left-click.png" alt="hand" class="hand" />
     </div>
     <script src="./js/end.js"></script>
