--- a/index/difficulty.html
+++ b/index/difficulty.html
@@ -8,11 +8,14 @@
     <title>Level</title>
   </head>
   <body>
+    <h1>Select difficulty level</h1>
     <div class="container">
       <img src="../Image/shrug.png" alt="nothing" />
-      <a href="">Easy</a>
-      <a href="">Medium</a>
-      <a href="">Hard</a>
+      <button>Easy</button>
+      <button>medium</button>
+      <button>Hard</button>
     </div>
+
+    <script src="../js/difficulty.js"></script>
   </body>
 </html>
