--- a/index/highscore.html
+++ b/index/highscore.html
@@ -10,7 +10,11 @@
   <body>
     <h1>Top score</h1>
     <ol></ol>
-
+    <div class="message">
+      <img src="../Image/robot (1).png" alt="nothing" />
+      <h3>No score has been recorded!</h3>
+    </div>
+    <a href="../index/index.html">Go Home</a>
     <script src="../js/high.js"></script>
   </body>
 </html>
