--- a/index/index.html
+++ b/index/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <a href="./game.html">Play</a>
       <a href="./difficulty.html">Difficulty Level</a>
-      <a href="./score.html">High Score</a>
+      <a href="./highscore.html">High Score</a>
     </div>
   </body>
 </html>
